# AVRORA

./: .gitignore  CMakeLists.txt  READEME.txt
res/shaders/: backpack.fs  backpack.vs  backpackExplode.fs  backpackExplode.gs  backpackExplode.vs  cube.fs  cube.vs  quad.fs  quad.vs  reflect.fs  screen.fs  singleColor.fs  singleColor.vs  singleTexture.fs  singleTexture.vs  skybox.vs
src/: main.cpp
src/Renderer/: Camera.cpp  Camera.h  Draw.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Shaders.cpp  Shaders.h
src/Resources/: ModelLoader.cpp  ModelLoader.h
